--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,9 @@
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
 }
+
+@media only screen and (max-width:991px) {
+    #search-title {
+        font-size: 1.2rem;
+    }
+}
